logs/mobility/build.make.097.log.stderr
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp: In constructor ‘DropOffController::DropOffController()’:
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:21:5: error: ‘seenEnoughCenterTagsCount’ was not declared in this scope
     seenEnoughCenterTagsCount = 10;//seen enough for what tho? i said for what tho?
     ^
/home/steven/rover_workspace/src/mobility/src/DropOffController.cpp:22:5: error: ‘collectionPointVisualDistance’ was not declared in this scope
     collectionPointVisualDistance = 0.5; //in meters
     ^
make[2]: *** [CMakeFiles/mobility.dir/src/DropOffController.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
